# wiki-feeds

./: .gitignore  CLAUDE.md  config.yaml  pyproject.toml  sync.sh
src/wiki_feeds/: __init__.py  cli.py  config.py  git.py  inbox.py  state.py
src/wiki_feeds/feeds/: arxiv.py  blogs.py
